@@ -18,6 +18,13 @@
  */
 #include "rebase-db.h"
 
+#if defined(__MSYS__)
+/* MSYS has no inttypes.h */
+# define PRIx64 "llx"
+#else
+# include <inttypes.h>
+#endif
+
 const char IMG_INFO_MAGIC[4] = "rBiI";
 const ULONG IMG_INFO_VERSION = 1;
 
@@ -38,5 +45,86 @@ int
 img_info_name_cmp (const void *a, const void *b)
 {
   return strcmp (((img_info_t *) a)->name, ((img_info_t *) b)->name);
+}
+
+void
+dump_rebasedb_header (FILE *f, img_info_hdr_t const *h)
+{
+  if (h == NULL)
+    {
+      fprintf (f, "Rebase DB Header is null\n");
+      return;
+    }
+
+  fprintf (f,
+      "Header\n"
+      "  magic  : %c%c%c%c\n"
+      "  machine: %s\n"
+      "  version: %d\n"
+      "  base   : 0x%0*" PRIx64 "\n"
+      "  offset : 0x%08lx\n"
+      "  downflg: %s\n"
+      "  count  : %ld\n",
+      h->magic[0], h->magic[1], h->magic[2], h->magic[3],
+      (h->machine == IMAGE_FILE_MACHINE_I386
+      ? "i386"
+      : (h->machine == IMAGE_FILE_MACHINE_AMD64
+        ? "x86_64"
+        : "unknown")),
+      h->version,
+      (h->machine == IMAGE_FILE_MACHINE_I386 ? 8 : 12),
+      h->base,
+      h->offset,
+      (h->down_flag ? "true" : "false"),
+      h->count);
+}
+
+void
+dump_rebasedb_entry (FILE *f,
+                     img_info_hdr_t const *h,
+                     img_info_t const *entry)
+{
+  if (h == NULL)
+    {
+      fprintf (f, "Rebase DB Header is null\n");
+      return;
+    }
+  if (entry == NULL)
+    {
+      fprintf (f, "Rebase DB Entry is null\n");
+      return;
+    }
+  fprintf (f,
+      "%-*s base 0x%0*" PRIx64 " size 0x%08lx slot 0x%08lx %c\n",
+      h->machine == IMAGE_FILE_MACHINE_I386 ? 45 : 41,
+      entry->name,
+      h->machine == IMAGE_FILE_MACHINE_I386 ? 8 : 12,
+      entry->base,
+      entry->size,
+      entry->slot_size,
+      entry->flag.needs_rebasing ? '*' : ' ');
+}
+
+void
+dump_rebasedb (FILE *f, img_info_hdr_t const *h,
+               img_info_t const *list, unsigned int sz)
+{
+  unsigned int i;
+  if (h == NULL)
+    {
+      fprintf (f, "Rebase DB Header is null\n");
+      return;
+    }
+  if (list == NULL)
+    {
+      fprintf (f, "Rebase DB List is null\n");
+      return;
+    }
+
+  dump_rebasedb_header (stdout, h);
+  for (i = 0; i < sz ; ++i)
+    {
+      dump_rebasedb_entry (stdout, h, &(list[i]));
+    }
 }
 
